--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,5 +1,217 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
+.container{
+  width: 50%;
+  border: 2px solid green;
+  padding: 2%;
+  margin: auto;
+}
+/* just setting it here for now*/
+.board-container {
+  width: 60%;
+  margin: 5px auto;
+  border: 2px solid green;
+  aspect-ratio: 3/2;
+  display: grid;
+  box-sizing: border-box;
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: repeat(6, minmax(0, 1fr));
+}
 
-/* This file is for your main application CSS */
+.player {
+  text-align: center;
+  background-color: bisque;
+}
+
+.player-top {
+  grid-row: 1;
+  grid-column: 3;
+}
+
+.card_area-top {
+  grid-row: 1;
+  grid-column: 4;
+}
+
+.player-right {
+  grid-row: 4;
+  grid-column: 6;
+}
+.card_area-right {
+  grid-row: 3;
+  grid-column: 6;
+}
+
+.player-left {
+  grid-row: 3;
+  grid-column: 1;
+}
+.card_area-left {
+  grid-row: 4;
+  grid-column: 1;
+}
+
+.player-bottom {
+  grid-row: 6;
+  grid-column: 1;
+}
+.card_area-bottom {
+  grid-row: 6;
+  grid-column: 2/7;
+}
+.card_area {
+  background-color: rgb(232, 127, 127);
+}
+
+.bidding{
+  grid-row: 5;
+  grid-column: 2/7;
+  display:flex;
+  align-items: flex-end;
+  padding-bottom: 10px;
+  width: 100%;
+  background-color: green;
+  justify-content: center;
+  gap: 10px;
+  cursor: pointer;
+}
+.bidding>span{
+  box-sizing: content-box;
+  text-align: center;
+  width: 2ch;
+  background-color: violet;
+  margin: 2px;
+  padding: 5px;
+}
+.self-card {
+  box-sizing: border-box;
+  display: inline-block;
+  flex-grow: 1;
+  flex-shrink: 1;
+  height: 110%;
+  transform: translateY(-9%);
+  aspect-ratio: 2/3;
+  background-color: aqua;
+  border: 2px solid green;
+}
+divs.self-card:first-of-type{
+  margin-left: 0;
+}
+div.self-card:not(:first-of-type){
+  margin-left: -2.89%;
+}
+.self-card:hover {
+  background-color: gray;
+}
+
+.self-card-odd {
+  background-color: gray;
+}
+.self-card-even {
+  background-color: darkkhaki;
+}
+
+.card_area-bottom {
+  width: 100%;
+}
+.self-card:last-child {
+  /*flex: 0 0 auto;*/
+}
+.card_area-bottom {
+  /* overflow-x: scroll; */
+  white-space: nowrap;
+}
+
+/* card play section middle*/
+.card-play{
+  height: 110%;
+  aspect-ratio: 2/3;
+  border: 2px solid green;
+  background-color: aqua;
+  box-sizing: border-box;
+}
+
+.card-play.bottom{
+  grid-row: 4;
+  grid-column: 4;
+}
+.card-play.left{
+  grid-row: 4;
+  grid-column: 3;
+}
+
+.card-play.right, .card-play.top{
+  grid-row: 3;
+  grid-column: 4;
+}
+
+.card-play.left{
+  background-color: coral;
+  transform-origin: bottom left;
+  transform: translate(0, -133.33%) rotate(90deg) ;
+  transform-origin: top center;
+  transform: translateX(21.67%) rotate(-90deg);
+  transform: rotate(-90deg);
+  transform: translateX(8.8%) rotate(-90deg);
+}
+.card-play.right{
+  background-color: goldenrod;
+  transform-origin: top center;
+  transform: translate(-50%, 90.90%) rotate(-90deg);
+}
+
+.card-play.top{
+  background-color: mediumaquamarine;
+  transform: translate(-50%,12%);
+}
+
+.card-play.bottom{
+  z-index: 10;
+  background-color: mistyrose;
+  transform: translate(-50%,-12%) rotate(180deg);
+}
+
+.card-play{
+  display: flex;
+  justify-content: space-between;
+  padding: 2px;
+}
+.card-play > span:first-child{
+  align-self: flex-start;
+}
+.card-play > span:last-child{
+  align-self: flex-end;
+}
+.card-play.bottom > span:last-child{
+  transform: rotate(180deg);
+}
+.card-play.right > span:last-child{
+  transform: rotate(180deg);
+}
+
+
+/* 
+.self-card {
+flex: 1;
+/ aspect-ratio: 63/88; /
+aspect-ratio: 1/1;
+text-align: center;
+/  /
+height: 110%;
+transform: translateY(-10%);
+/ margin-left: -10%; /
+/ flex-start: start; /
+min-width: 100px;
+max-width: auto;
+}
+.self-card {
+display: flex;
+justify-content: center;
+align-items: center;
+} 
+.card_area-bottom {
+display: flex;
+justify-content: center;
+}
+ */
