--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -110,7 +110,11 @@ div.self-card:not(:first-of-type){
   background-color: rgb(245,245,245);
 }
 .self-card.playable{
-  transform: translateY(-12%);
+  /* transform: translateY(-12%); */
+}
+
+.self-card.transition_test{
+  transform: translateY(-52%);
 }
 .self-card.unplayable{
   pointer-events: none;
@@ -149,7 +153,6 @@ div.self-card:not(:first-child){
 }
 
 .card-play.left{
-  background-color: coral;
   transform-origin: bottom left;
   transform: translate(0, -133.33%) rotate(90deg) ;
   transform-origin: top center;
@@ -158,19 +161,16 @@ div.self-card:not(:first-child){
   transform: translateX(8.8%) rotate(-90deg);
 }
 .card-play.right{
-  background-color: goldenrod;
   transform-origin: top center;
   transform: translate(-50%, 90.90%) rotate(-90deg);
 }
 
 .card-play.top{
-  background-color: mediumaquamarine;
   transform: translate(-50%,12%);
 }
 
 .card-play.bottom{
   z-index: 10;
-  background-color: mistyrose;
   transform: translate(-50%,-12%) rotate(180deg);
 }
 
@@ -238,7 +238,6 @@ to{
   background-color: aqua;
 }
 }
-
 .timer{
   grid-row: 1;
   grid-column: 1;
